# movrob

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: TP1-EX1.launch  TP1-EX2.launch  TP1-EX3.launch  TP1-EX4.launch  TP1-EX5.launch  TP1-EX6.launch  TP1-EX7.launch  TP2-EX1.launch  TP2-EX2a.launch  TP2-EX2b.launch  TPF-QL.launch  example.launch
scripts/: TP1-Ex1.py  TP1-Ex2.py  TP1-Ex3.py  TP1-Ex4.py
src/: Controller.py  DiferentialRobot.py  LidarScanner.py  PathFollower.py  PotentialField.py  Robots.py  TP1-Ex1.py  TP1-Ex2.py  TP1-Ex3.py  TP1-Ex4.py  TP1-Ex5.py  TP1-Ex6.py  TP2-Ex2b.py  TPF-QL.py  TangentBug.py  WaveFront.py  example.py
src/controllers/: Controller.py  DiferentialRobot.py
src/planners/: Astar.py  PRM.py  PathFollower.py  Planner.py  PotentialField.py  QLearning.py  RRT.py  TangentBug.py  TrajectoryFollower.py  WaveFront.py
src/utils/: LidarScanner.py  Node.py  potential_field.py  utils.py
worlds/: TP1-Ex1.world  TP1-Ex2.world  TP1-Ex4.world  TP1_Ex1.world  TP1_Ex2.world  TP1_Ex3.world  TP1_Ex4.world  TP2-Ex1.world  TP2-Ex2.world  test.world  test_tp1_ex1.world  test_tp1_ex4.world
